# Fin

./: gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/lottttto/miner/di/: AppModule.kt
app/src/main/java/com/lottttto/miner/navigation/: NavGraph.kt
app/src/main/java/com/lottttto/miner/repositories/: SettingsRepository.kt
app/src/main/java/com/lottttto/miner/screens/auth/: TermsScreen.kt
app/src/main/java/com/lottttto/miner/screens/settings/: AboutScreen.kt  MiningPoolsScreen.kt  MoneroMiningSettingsScreen.kt
app/src/main/java/com/lottttto/miner/screens/wallet/: WalletScreen.kt
app/src/main/java/com/lottttto/miner/services/: MiningForegroundService.kt  RealMiningWorker.kt
app/src/main/java/com/lottttto/miner/utils/: NativeMinerLib.kt
app/src/main/java/com/lottttto/miner/viewmodels/: MainViewModel.kt
app/src/main/res/values/: strings.xml
